# accounting

./: .gitignore  README.md
accfin/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
accfin/.finance_logs/: finance_daily_2026-05-20.csv  finance_daily_2026-05-22.csv  finance_daily_2026-05-23.csv
accfin/agents/: Dockerfile
accfin/agents/hermes/: __init__.py  classify.py  document_text.py  expense_extract.py  extract.py  llm_extract.py  main.py  ollama_client.py  ollama_warmup.py  reconcile.py
accfin/app/: __init__.py  main.py
accfin/app/clients/: __init__.py  hermes.py
accfin/app/constants/: client_admin.py  finance_setup.py  tenant.py
accfin/app/core/: accounting_errors.py  audit_hash.py  config.py  crypto.py  database.py  dependencies.py  exceptions.py  jwt.py  mail_action_token.py  metrics.py  queues.py  redis_client.py  state_machine.py
accfin/app/models/: __init__.py  accounting_period.py  agreements.py  audit.py  base.py  case.py  counterparty_master.py  executive_mail.py  expense.py  gl_cutoff_reminder.py  ledger.py  mail.py  notification.py  policy.py  purchase_order.py  rbac.py  reconciliation.py  regulatory.py  tenant.py  tenant_profile.py  travel.py  user.py  vendor_extraction_hint.py  workflow.py
accfin/app/policies/: __init__.py  binding_authority.py  engine.py
accfin/app/repositories/: approval.py  audit.py  case.py  executive_mail.py  expense.py  ledger.py  mail.py  notification.py  policy.py  purchase_order.py  reconciliation.py  system_settings.py  travel.py  user.py  vendor_extraction_hint.py
accfin/app/schemas/: approval.py  audit.py  auth.py  case.py  case_attachment.py  case_re_extract.py  case_reversal.py  client_admin.py  dashboard.py  executive_mail.py  expense.py  hermes.py  journal_entry.py  mail.py  notification_api.py  parsing_confirmation.py  reconciliation.py  trial_balance.py  vendor_extraction_hint.py  vendor_suggestion.py
accfin/app/services/: accounting_calendar.py  ap_escalation_mail_labels.py  (+47 more)
accfin/docs/: CLIENT_ADMIN_UI.md  DEPLOYMENT_VERSION_HISTORY.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md
accfin/gateway/: Dockerfile  README.md  main.py
accfin/migrations/: env.py
accfin/monitoring/: INCIDENT_RESPONSE.md  prometheus.yml
accfin/orchestrator/: Dockerfile  README.md  main.py
accfin/scripts/: generate-keys.py  uat_phase13.sh
accfin/tests/: conftest.py  test_health.py
accfin/traefik/: traefik.yml
accfin/workers/: __init__.py  base.py
(+331 files in other folders)
