[project]
name = "accfin"
version = "0.6.0"
description = "AI Finance Operations Platform — backend (bp0.work)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.10.0",
    "pyotp>=2.9.0",
    "cryptography>=44.0.0",
    "email-validator>=2.2.0",
    "prometheus-client>=0.21.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    "boto3>=1.35.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "fakeredis>=2.26.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "agents*", "workers*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
